--- a/index.html
+++ b/index.html
@@ -4,21 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>E-Com</title>
+    <link rel="stylesheet" href="styles.css">
+    <title>Responsive Layout</title>
 </head>
 
 <body>
-    <header class="header">
-        <h1>Country House</h1>
-        <input type="search" id="userInput" onkeyup="handleInput()" placeholder="Search">
-    </header>
-    <div id="container">
-        <div class="product">
+    <header>
+        <h2>Header</h2>
+        <div class="ancor">
+            <a href="">Home</a>
+            <a href="">About</a>
+            <a href="">Contact</a>
         </div>
-    </div>
-
-    <script src="script.js"></script>
+    </header>
+    <section class="aside">
+        <div class="main">
+            <h2>Section</h2>
+            <article>article</article>
+            <article>article</article>
+            <article>article</article>
+        </div>
+        <div class="asidebar">
+            <aside>Aside</aside>
+        </div>
+    </section>
+    <footer>&copy; All aright Desereves to me</footer>
 </body>
 
 </html>
